cabal-version:
  2.4
name:
  derivingvia-extras
version:
  0.1.0.0
synopsis: 
  DerivingVia extras - Miscellaneous /via/ types.
description: 
  Includes various functionality to use with 'DerivingVia'.
  .
  > -- >> alice = User "Alice" 50 0xDEADBEAF
  > -- >> bob   = User "Bob"   20 0xDEADBEAF
  > -- >>
  > -- >> alice == bob
  > -- True
  > -- >> hash alice == hash bob
  > -- True
  > data User = User
  >   { name   :: String
  >   , age    :: Int
  >   , userID :: Integer
  >   }
  >   deriving (Eq, Ord, Hashable)
  >   via User `On` "userID"

bug-reports:
  https://github.com/Icelandjack/derivingvia-extras/issues
author:
  Baldur Blöndal
copyright:
  BSD2
category:
  Deriving, 
  Utils
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:  
    Deriving.On
  build-depends:
    base ^>=4.14.3.0,
    hashable -any
  hs-source-dirs:
    src
  default-language: 
    Haskell2010
